--- a/src/components/organisms/header/header.scss
+++ b/src/components/organisms/header/header.scss
@@ -11,7 +11,7 @@
     // grid-template-rows: 70% 30%;
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 75% 10% 15%;
+    grid-template-rows: 70% 15% 15%;
     background-size: cover;
   }
   &__heading,
